# mhs_fenicsx

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md
2d_convection/: input.yaml  main.py
2d_printing/: input.yaml  main.py  meshing.py
2d_slob/: input.yaml
3d_lpbf/: input.yaml  main.py  meshing.py  write_gcode.py
3d_slob/: input.yaml
cpp/: CMakeLists.txt  CustomSparsityPattern.h  activation_utils.cpp  assemble_monolithic_robin.h  assemble_robin_robin_monolithic.h  compute_el_size_along_vector.h  create_robin_robin_monolithic.h  custom_create_matrix.cpp  diffmesh_utils.cpp  diffmesh_utils.h  geometry_utils.cpp  get_active_dofs_external.h  get_facet_integration_entities.h  interpolate.cpp  interpolate_dg0_at_facets.cpp  interpolate_dg0_at_facets.h  locate_active_boundary.cpp  locate_active_boundary.h  modifyPetscMatrixEntry.h  my_determine_point_ownership.cpp  my_eval_affine.h  submesh_utils.cpp  tabulate_facet_qpoints.h  tabulate_gamma_qpoints.h  wrapper.cpp  wrapper_assemble_monolithic_robin.cpp  wrapper_assemble_robin_robin_monolithic.cpp  wrapper_create_robin_robin_monolithic.cpp  wrapper_get_facet_integration_entities.cpp  wrapper_modifyPetscMatrixEntry.cpp  wrapper_tabulate_facet_qpoints.cpp  wrapper_tabulate_gamma_qpoints.cpp
examples/1d_check_advection/: main.py
examples/2d_check_advection/: input.yaml  main.py
examples/2d_convection/: input.yaml  main.py
examples/2d_printing/: input.yaml  write_gcode.py
examples/3d_lpbf/: input_05.yaml  meshing.py  profiling_CG.txt
examples/3d_lpbf_cube/: README.md  main.py  mesh.py  run.sh
examples/3d_slob/: input.yaml
examples/amb2018_02/: README.md  calibration.py  calibration_input.yaml  candidates.txt  input.yaml  main.py  meshing.py  wrap_sbatch.sh
examples/demo_phase_change/: main.py
examples/example_compile_create_form/: issue.py  issue_bis.py
examples/kopp_stroke/: calibration.py  calibration_input.yaml  chimera_input.yaml  contour.py  input.yaml  main.py  meshing.py  wrap_interactive_sesh.sh  wrap_sbatch.sh
examples/kopp_stroke_bis/: calibration.py
examples/locate_boundary/: main.py
examples/parallel_coupling_figure/: input.yaml  main.py
examples/poisson_dd_square/: diff_mesh.py  input.yaml  main.py  same_mesh_robin_nested.py
examples/puso_cubes/: input.yaml  main.py
examples/stacked_cubes/: analyze_dumps.py  compute_speedups.py  input.yaml  main.py  mesh.py  run.sh  wrap_sbatch.sh
laplace_square_dd/: Problem.py  main.py
mhs_fenicsx/: CMakeLists.txt  pyproject.toml
mhs_fenicsx/drivers/: single_problem_driver.py
mhs_fenicsx/gcode/: __init__.py
mhs_fenicsx/geometry/: __init__.py
mhs_fenicsx/problem/: __init__.py  heatsource.py  helpers.py  material.py
mhs_fenicsx/problem/cpp/: CMakeLists.txt  locate_active_boundary.cpp
mhs_fenicsx/python/: pyproject.toml
mhs_fenicsx/python/mhs_fenicsx/drivers/: __init__.py
mhs_fenicsx/python/mhs_fenicsx/gcode/: __init__.py
mhs_fenicsx/python/mhs_fenicsx/problem/: helpers.py
multiphenicsx-example03/: main.py  meshing.py
multiphenicsx-example07/: tutorial_understanding_restrictions.py
project2moving/: input.yaml  main.py  meshing.py
python/mhs_fenicsx/: __init__.py
python/mhs_fenicsx/chimera/: __init__.py
python/mhs_fenicsx/drivers/: __init__.py  _monolithic_drivers.py  _robin_drivers.py  _single_problem_driver.py  _staggered_drivers.py  _staggered_interp_drivers.py  chimera_substeppers.py  monolithic_drivers.py  newton_raphson.py  single_problem_driver.py  staggered_dn_driver.py  staggered_drivers.py  substepper.py  substepping_driver.py
python/mhs_fenicsx/gcode/: __init__.py
runs/1d_check_advection/: input.yaml  main.py
runs/1d_nnlinear_conductivity/: input.yaml  main.py
runs/1d_phase_change/: input.yaml  main.py
runs/2_mats_diffusing/: main.py
runs/2d_check_advection/: input.yaml  main.py
runs/2d_chimera_welding/: helpers.py  input.yaml  main.py  monolithic_chimera.py  staggered_chimera.py
runs/2d_convection/: input.yaml  main.py
runs/2d_printing/: input.yaml  main.py
runs/2d_slob/: input.yaml  main.py
runs/2d_substepping/: input.yaml  main.py
runs/3d_lpbf/: input_0125.yaml  input_05.yaml  main.py  main_select_layers.py  meshing.py
runs/3d_slob/: main.py
runs/bug_restriction_assembly/: Problem.py  main.py
runs/demo_phase_change/: main.py
runs/detectInterface/: main.py
runs/example/: main.py
runs/example_compile_create_form/: issue.py
runs/laplace_square_dd/: Problem.py  driver.py  input.yaml  main.py  neumann.py
runs/neumann_from_neighbour/: main.py  mwe.py
runs/one-sided-integral-example/: main.py
runs/poisson_dd_square/: diff_mesh_robin_nested.py  input.yaml  main.py  same_mesh_robin_blocked.py  same_mesh_robin_nested.py
runs/solve_left_unit_square/: main.py
runs/test_modify_petsc_mat_entry/: demo_gausspoints_boun.py  lpbf.yaml  main.py  utils.py
runs/test_profiling/: main.py
tests/: README.md  run_alltests_1by1.py
tests/1d_nnlinear_conductivity/: test_1dnnlinearconduc.py  test_input.yaml
tests/1d_phase_change/: input.yaml  test_1d_phase_change.py  test_input.yaml
tests/2d_chimera_welding/: input.yaml  staggered_chimera.py  test_input.yaml  test_monolithic_chimera.py
tests/2d_lpbf_melt_substep/: extract_video_frames.py  input.yaml  mesh.py  test_input.yaml  test_lpbf_melt_substep.py
tests/2d_staggered_poisson/: input.yaml  test_2d_staggered_poisson.py
tests/2d_substepping/: 2d_chimera_n_substep.py  README.md  input.yaml  midline_sms.py  test_2d_chimera_substepping.py  test_2d_substepping.py  test_input.yaml
tests/2mats_diffusing_square/: test_2mats_diffusing_square.py  test_input.yaml
tests/3d_printing_5on5/: input.yaml  test_3d_printing_5on5.py
tests/RR_poisson/: input.yaml  test_RR_poisson.py
tests/monolithic_RR_poisson/: input.yaml  test_monolithic_RR_poisson.py
tests/poisson_dd_square/: input.yaml  test_poisson_dd_square.py
tests/staggered_dd_poisson_2d/: input.yaml  test_staggered_dd_poisson_2d.py
tests/substeppin_n_meltin/: 2d_melting.py  input.yaml  test_input.yaml  test_melt_n_substep.py
writepos_example/: main.py
(+16 files in other folders)
